--- a/.github/workflows/section5-docker-test2.yml
+++ b/.github/workflows/section5-docker-test2.yml
@@ -1,5 +1,3 @@
-# Section 5 Docker Testing Workflow
-# Simple workflow to validate Docker functionality
 name: Section 5 - Docker Test
 
 on:
@@ -14,7 +12,7 @@ on:
     paths:
       - "docker/**"
       - "src/**"
-  workflow_dispatch: # Allow manual triggering
+  workflow_dispatch:
 
 env:
   PYTHON_VERSION: "3.11"
@@ -33,6 +31,11 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
+      - name: Install dependencies for test data creation
+        run: |
+          pip install --upgrade pip
+          pip install pandas numpy scikit-learn joblib
+
       - name: Create test data and models
         run: |
           mkdir -p data/processed models logs
@@ -41,7 +44,8 @@ jobs:
           import numpy as np
           import joblib
           from sklearn.ensemble import RandomForestRegressor
-
+          
+          print('📊 Creating test dataset...')
           # Create test dataset
           np.random.seed(42)
           n_movies = 1000
@@ -55,13 +59,15 @@ jobs:
               'genres': ['Drama,Action'] * n_movies
           })
           df.to_csv('data/processed/movies_with_ratings.csv', index=False)
-
+          print(f'✅ Created dataset with {len(df)} movies')
+          
+          print('🤖 Creating test model...')
           # Create test model
           model = RandomForestRegressor(n_estimators=10, random_state=42)
           X_dummy = np.random.random((100, 3))
           y_dummy = np.random.random(100) * 9 + 1
           model.fit(X_dummy, y_dummy)
-
+          
           model_info = {
               'model': model,
               'feature_names': ['startYear', 'runtimeMinutes', 'numVotes'],
@@ -69,7 +75,7 @@ jobs:
               'timestamp': '20250601_120000'
           }
           joblib.dump(model_info, 'models/docker_test_model.joblib')
-          print('✅ Test data and model created')
+          print('✅ Test model saved')
           "
 
       - name: Build API Docker image
@@ -85,65 +91,84 @@ jobs:
       - name: Test Docker images
         run: |
           echo "🧪 Testing Docker images..."
-
+          
           # Test API image
           echo "Testing API image..."
           docker run --rm mlops-api:test python -c "
-          import src.api.main
-          print('✅ API image works')
+          try:
+              import src.api.main
+              print('✅ API image works')
+          except Exception as e:
+              print(f'❌ API image test failed: {e}')
+              exit(1)
           "
-
+          
           # Test Trainer image
           echo "Testing Trainer image..."
           docker run --rm mlops-trainer:test python -c "
-          import src.models.trainer
-          print('✅ Trainer image works')
+          try:
+              import src.models.trainer
+              print('✅ Trainer image works')
+          except Exception as e:
+              print(f'❌ Trainer image test failed: {e}')
+              exit(1)
           "
 
       - name: Start Docker Compose stack
         run: |
           echo "🚀 Starting Docker Compose stack..."
           cd docker
-
-          # Start services
           docker compose up -d
-
-          # Wait for services to be ready
+          
           echo "⏳ Waiting for services to be ready..."
           sleep 30
-
-          # Check service status
+          
+          echo "📋 Service status:"
           docker compose ps
 
       - name: Test API endpoints
         run: |
           echo "🔍 Testing API endpoints..."
-
-          # Test health endpoint
-          curl -f http://localhost:8000/health || {
-            echo "❌ Health endpoint failed"
-            docker compose -C docker logs api
-            exit 1
-          }
-          echo "✅ Health endpoint working"
-
+          
+          # Test health endpoint with retry
+          for i in {1..5}; do
+            if curl -f http://localhost:8000/health; then
+              echo "✅ Health endpoint working"
+              break
+            else
+              echo "⏳ Attempt $i failed, retrying..."
+              sleep 10
+              if [ $i -eq 5 ]; then
+                echo "❌ Health endpoint failed after 5 attempts"
+                docker compose -C docker logs api
+                exit 1
+              fi
+            fi
+          done
+          
           # Test MLflow
-          curl -f http://localhost:5000/health || {
+          if curl -f http://localhost:5000/health; then
+            echo "✅ MLflow endpoint working"
+          else
             echo "❌ MLflow endpoint failed"
             docker compose -C docker logs mlflow
             exit 1
-          }
-          echo "✅ MLflow endpoint working"
-
+          fi
+          
           # Test movie prediction
-          curl -X POST "http://localhost:8000/predict/movie" \
+          response=$(curl -X POST "http://localhost:8000/predict/movie" \
                -H "Content-Type: application/json" \
-               -d '{"title":"Docker Test","startYear":2020,"runtimeMinutes":120,"numVotes":5000}' || {
-            echo "❌ Movie prediction failed"
+               -d '{"title":"Docker Test","startYear":2020,"runtimeMinutes":120,"numVotes":5000}' \
+               -w "%{http_code}" -o /tmp/response.json)
+          
+          if [ "$response" = "200" ]; then
+            echo "✅ Movie prediction working"
+            echo "Response: $(cat /tmp/response.json)"
+          else
+            echo "❌ Movie prediction failed (HTTP $response)"
             docker compose -C docker logs api
             exit 1
-          }
-          echo "✅ Movie prediction working"
+          fi
 
       - name: Cleanup
         if: always()
@@ -162,6 +187,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies for test data creation
+        run: |
+          pip install --upgrade pip
+          pip install pandas numpy scikit-learn joblib
+
       - name: Create test data
         run: |
           mkdir -p data/processed models logs
@@ -170,7 +205,8 @@ jobs:
           import numpy as np
           import joblib
           from sklearn.ensemble import RandomForestRegressor
-
+          
+          print('📊 Creating monitoring test dataset...')
           # Create test dataset
           np.random.seed(42)
           df = pd.DataFrame({
@@ -183,13 +219,15 @@ jobs:
               'genres': ['Drama'] * 100
           })
           df.to_csv('data/processed/movies_with_ratings.csv', index=False)
-
+          print(f'✅ Created monitoring dataset with {len(df)} records')
+          
+          print('🤖 Creating monitoring test model...')
           # Create test model
           model = RandomForestRegressor(n_estimators=5, random_state=42)
           X = np.random.random((50, 3))
           y = np.random.random(50) * 9 + 1
           model.fit(X, y)
-
+          
           model_info = {
               'model': model,
               'feature_names': ['startYear', 'runtimeMinutes', 'numVotes'],
@@ -197,50 +235,86 @@ jobs:
               'timestamp': '20250601_120000'
           }
           joblib.dump(model_info, 'models/monitoring_test_model.joblib')
+          print('✅ Monitoring test model saved')
           "
 
       - name: Test monitoring stack
         run: |
           echo "📊 Testing monitoring integration..."
-
+          
           # Start monitoring stack
           cd docker
           docker compose -f docker-compose.monitoring.yml up -d
-
-          # Wait for services
+          
+          # Wait for services with progress indicator
           echo "⏳ Waiting for monitoring services..."
-          sleep 60
-
-          # Check Prometheus
-          curl -f http://localhost:9090/-/ready || {
-            echo "❌ Prometheus not ready"
-            docker compose -f docker-compose.monitoring.yml logs prometheus
-            exit 1
-          }
-          echo "✅ Prometheus ready"
-
+          for i in {1..12}; do
+            echo "⏳ Waiting... ($((i*5))s)"
+            sleep 5
+          done
+          
+          echo "📋 Monitoring services status:"
+          docker compose -f docker-compose.monitoring.yml ps
+          
+          # Check Prometheus with retry
+          echo "🔍 Testing Prometheus..."
+          for i in {1..3}; do
+            if curl -f http://localhost:9090/-/ready; then
+              echo "✅ Prometheus ready"
+              break
+            else
+              echo "⏳ Prometheus attempt $i failed, retrying..."
+              sleep 10
+              if [ $i -eq 3 ]; then
+                echo "❌ Prometheus not ready after 3 attempts"
+                docker compose -f docker-compose.monitoring.yml logs prometheus
+                exit 1
+              fi
+            fi
+          done
+          
           # Check Grafana
-          curl -f http://localhost:3000/api/health || {
-            echo "❌ Grafana not ready"
-            docker compose -f docker-compose.monitoring.yml logs grafana
-            exit 1
-          }
-          echo "✅ Grafana ready"
-
+          echo "🔍 Testing Grafana..."
+          for i in {1..3}; do
+            if curl -f http://localhost:3000/api/health; then
+              echo "✅ Grafana ready"
+              break
+            else
+              echo "⏳ Grafana attempt $i failed, retrying..."
+              sleep 10
+              if [ $i -eq 3 ]; then
+                echo "❌ Grafana not ready after 3 attempts"
+                docker compose -f docker-compose.monitoring.yml logs grafana
+                exit 1
+              fi
+            fi
+          done
+          
           # Check AlertManager
-          curl -f http://localhost:9093/-/ready || {
-            echo "❌ AlertManager not ready"
-            docker compose -f docker-compose.monitoring.yml logs alertmanager
-            exit 1
-          }
-          echo "✅ AlertManager ready"
-
+          echo "🔍 Testing AlertManager..."
+          for i in {1..3}; do
+            if curl -f http://localhost:9093/-/ready; then
+              echo "✅ AlertManager ready"
+              break
+            else
+              echo "⏳ AlertManager attempt $i failed, retrying..."
+              sleep 10
+              if [ $i -eq 3 ]; then
+                echo "❌ AlertManager not ready after 3 attempts"
+                docker compose -f docker-compose.monitoring.yml logs alertmanager
+                exit 1
+              fi
+            fi
+          done
+          
           # Test API metrics endpoint (if API is running)
           if curl -f http://localhost:8000/metrics 2>/dev/null; then
             echo "✅ API metrics endpoint working"
           else
             echo "ℹ️ API metrics endpoint not available (API not running)"
           fi
+          
+          echo "🎉 All monitoring services are ready!"
 
       - name: Cleanup monitoring stack
         if: always()
@@ -260,21 +334,40 @@ jobs:
         run: |
           echo "📋 Section 5 Docker Test Results"
           echo "================================"
-
+          
           docker_status="${{ needs.docker-test.result }}"
           monitoring_status="${{ needs.monitoring-integration.result }}"
-
+          
           echo "🐳 Docker Build & Test: $docker_status"
           echo "📊 Monitoring Integration: $monitoring_status"
-
+          
           if [[ "$docker_status" == "success" && "$monitoring_status" == "success" ]]; then
             echo ""
             echo "🎉 All Section 5 tests passed!"
             echo "✅ Docker containerization working"
-            echo "✅ Monitoring integration working"
+            echo "✅ API endpoints responding"
+            echo "✅ MLflow integration working"
+            echo "✅ Monitoring stack operational"
             echo "✅ Ready for Section 6.2 CI/CD Pipeline"
+            echo ""
+            echo "🚀 Next Steps:"
+            echo "   • Deploy to staging environment"
+            echo "   • Set up production monitoring"
+            echo "   • Configure automated deployments"
           else
             echo ""
-            echo "❌ Some tests failed. Please check the logs."
+            echo "❌ Some tests failed. Please check the logs above."
+            echo ""
+            echo "🔍 Troubleshooting:"
+            if [[ "$docker_status" != "success" ]]; then
+              echo "   • Check Docker build logs"
+              echo "   • Verify Dockerfile syntax"
+              echo "   • Ensure all dependencies are installed"
+            fi
+            if [[ "$monitoring_status" != "success" ]]; then
+              echo "   • Check monitoring service logs"
+              echo "   • Verify port availability"
+              echo "   • Check docker-compose.monitoring.yml"
+            fi
             exit 1
           fi
